--- a/data/static/html/admin_competition.html
+++ b/data/static/html/admin_competition.html
@@ -30,14 +30,14 @@ block base_content %}
             <td>{{ user.application.selectedProgram }}</td>
             <td>
               <button class="btn btn-success confirm-btn" data-id="{{ user.id }}">
-                Подтвердить
+                Зачислить
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" hidden></span>
               </button>
             </td>
             <td>
               <button class="btn btn-danger reject-btn" data-bs-toggle="modal"
                 data-bs-target="#rejectModal{{ user.id }}" data-id="{{ user.id }}">
-                Отклонить
+                Удалить заявку
               </button>
               <div class="modal fade" id="rejectModal{{ user.id }}" tabindex="-1" role="dialog"
                 aria-labelledby="rejectModalLabel{{ user.id }}" aria-hidden="true">
