--- a/data/static/html/admin_graduate.html
+++ b/data/static/html/admin_graduate.html
@@ -7,7 +7,8 @@
 
         <label for="applicationFiles" class="form-label">Загрузите таблицу с заполненными преподавателями оценками. Если
             ученик
-            бросил обучение, ставим оценку "0". Ученикам с дипломом ставим "+" или "да" в последнем столбце</label>
+            бросил обучение, ставим оценку "0". Ученикам с дипломом ставим "+", "диплом" или "да" в последнем
+            столбце</label>
         <a href="/admin/graduate_csv">Скачать таблицу для заполнения туда оценок</a>
 
         <p>Пример заполненной таблицы:</p>
