--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -9,7 +9,7 @@ endblock %} {% block base_content %}
       <ol class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/approve" class="fw-bold">📜 Подтверждение заявок</a>
+            <a href="/admin/approve" class="fw-bold">📜 Проверка документов</a>
             <br>
             Проверка документов и данных
           </div>
@@ -69,12 +69,20 @@ endblock %} {% block base_content %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
+            <a href="/admin/income" class="fw-bold">💵 Доход с программ</a>
+            <br>
+            Предполагаемый доход без учета льгот
+          </div>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
             <a href="/admin/statistics" class="fw-bold">📊 Статистика</a>
             <br>
             Инструменты статистики
           </div>
         </li>
       </ol>
+
     </div>
   </div>
 </div>
