--- a/data/static/html/admin_edit_users.html
+++ b/data/static/html/admin_edit_users.html
@@ -115,9 +115,9 @@ block base_content %}
               <td>
                 <input style="width: 60px" value="{{ user.id }}" readonly />
               </td>
-              <td> {{ user.fullName }}<br>{{ user.parentFullName }} (род.)</td>
-              <td>{{ user.email }}<br>{{ user.parentEmail }} (род.)</td>
-              <td>{{ user.phone }}<br>{{ user.parentPhone }} (род.)</td>
+              <td> {{ user.fullName }}{% if user.parentFullName %} <br>{{ user.parentFullName }} (род.) {% endif %}</td>
+              <td>{{ user.email }}{% if user.parentEmail %} <br>{{ user.parentEmail }} (род.) {% endif %}</td>
+              <td>{{ user.phone }}{% if user.parentPhone %} <br>{{ user.parentPhone }} (род.) {% endif %}</td>
               <td>{{ user.application.selectedProgram }}</td>
               <td class="user-status" data-user-status="{{ user.application.status }}">
               </td>
