--- a/data/static/html/admin_lookup_result.html
+++ b/data/static/html/admin_lookup_result.html
@@ -25,8 +25,10 @@ block base_content %}
                                 <input style="width: 60px" value="{{ user.id }}" readonly />
                             </td>
                             <td> {{ user.fullName }}</td>
-                            <td>{{ user.email }}<br>{{ user.parentEmail }} (род.)</td>
-                            <td>{{ user.phone }}<br>{{ user.parentPhone }} (род.)</td>
+                            <td>{{ user.email }}{% if user.parentEmail %} <br>{{ user.parentEmail }} (род.) {% endif %}
+                            </td>
+                            <td>{{ user.phone }}{% if user.parentPhone %} <br>{{ user.parentPhone }} (род.) {% endif %}
+                            </td>
                             <td>{% if user.application.status and user.application.status not in ("filling_info",
                                 "filling_docs", "waiting_for_confirmation") %} {{
                                 user.application.selectedProgram
