--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -13,7 +13,7 @@ base_content %}
       <input type="email" class="form-control" id="email" name="email" required placeholder="ivanov@example.com" />
     </div>
     <div class="form-group mb-3">
-      <label for="parentEmail">Email представителя:</label>
+      <label for="parentEmail">Email представителя (если нет 18 лет):</label>
       <input type="email" class="form-control" id="parentEmail" name="parentEmail" placeholder="parent@example.com" />
     </div>
     <div class="form-group mb-3">
@@ -25,11 +25,11 @@ base_content %}
       <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required />
     </div>
     <div class="form-group mb-3">
-      <label for="school">Школа:</label>
-      <input type="text" class="form-control" id="school" name="school" required placeholder="Школа №1" />
+      <label for="school">Образовательная организация (если есть):</label>
+      <input type="text" class="form-control" id="school" name="school" placeholder="Школа №1" />
     </div>
     <div class="form-group mb-3">
-      <label for="schoolClass">Класс:</label>
+      <label for="schoolClass">Класс образовательной организации (если есть):</label>
       <input type="number" class="form-control" id="schoolClass" name="schoolClass" placeholder="9" />
     </div>
     <div class="form-group mb-3">
@@ -92,9 +92,9 @@ base_content %}
       var data = {
         fullName: fullName,
         email: email,
-        parentEmail: parentEmail,
-        school: school,
-        schoolClass: schoolClass,
+        parentEmail: parentEmail === "" ? null : parentEmail,
+        school: school === "" ? null : school,
+        schoolClass: schoolClass === "" ? null : schoolClass,
         birthDate: formattedBirthDate,
         password: password,
       };
