--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -20,7 +20,7 @@ endblock %} {% block base_content %}
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/rejected_users_by_docs" class="fw-bold">❌ Отклоненные заявки</a>
+            <a href="/admin/rejected_users_by_docs" class="fw-bold">❌ Заявки с отклоненными документами</a>
             <br>
             Просмотр отклоненных заявок
           </div>
