--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -7,13 +7,14 @@ base_content %}
       <label for="fullName">ФИО обучающегося:</label>
       <input type="text" class="form-control" id="fullName" name="fullName" required
         placeholder="Иванов Иван Иванович" />
+      <small style="color: #00000088">Точно как в паспорте</small>
     </div>
     <div class="form-group mb-3">
       <label for="email">Email обучающегося:</label>
       <input type="email" class="form-control" id="email" name="email" required placeholder="ivanov@example.com" />
     </div>
     <div class="form-group mb-3">
-      <label for="parentEmail">Email представителя (если нет 18 лет):</label>
+      <label for="parentEmail">Email представителя (если обучающемуся нет 18 лет):</label>
       <input type="email" class="form-control" id="parentEmail" name="parentEmail" placeholder="parent@example.com" />
     </div>
     <div class="form-group mb-3">
