Экспорт данных пользователей в xlsx

--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -91,8 +91,8 @@ endblock %} {% block base_content %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <b class="mr-3">📤 Экспорт данных в Excel </b><a href="/admin/export_csv?all=1" class="ml-3 fw-bold">
-              (Все</a> | <a href="/admin/export_csv?all=0" class="fw-bold">Только зачисленные)</a>
+            <b class="mr-3">📤 Экспорт данных в Excel </b><a href="/admin/export_users_xlsx?all=1" class="ml-3 fw-bold">
+              (Все</a> | <a href="/admin/export_users_xlsx?all=0" class="fw-bold">Только зачисленные)</a>
             <br>
             Экспорт данных для дальнейшей обработки
           </div>
