--- a/data/static/html/base.html
+++ b/data/static/html/base.html
@@ -36,7 +36,7 @@
     <div id="header-container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img src="/static/icons/cs.png" style="max-height: 48px; width: auto;"
               class="navbar-logo d-inline-block align-top" />
           </a>
@@ -54,7 +54,7 @@
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link" href="/"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                <a class="nav-link" href="/dashboard"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                     fill="currentColor" class="bi bi-person-arms-up" viewBox="0 0 16 16">
                     <path d="M8 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3" />
                     <path
