UI-тесты, мелкие правки

--- a/data/static/html/dashboard.html
+++ b/data/static/html/dashboard.html
@@ -37,7 +37,8 @@ block base_content %}
           Открыть журнал
         </a>
         {% endif %}
-        <button data-bs-toggle="modal" data-bs-target="#setPasswordModal" class="btn btn-outline-primary mb-3">Сменить
+        <button id="changePassword" data-bs-toggle="modal" data-bs-target="#setPasswordModal"
+          class="btn btn-outline-primary mb-3">Сменить
           пароль</button>
       </div>
 
