--- a/data/static/html/login.html
+++ b/data/static/html/login.html
@@ -3,6 +3,7 @@ block base_content %}
 <div id="header-container"></div>
 <div class="container">
   <h1 class="mt-4">Вход</h1>
+  <a href="/registration">Регистрация?</a>
   <form class="mt-4" id="loginForm" method="post" action="/token">
     <div class="form-group mb-3">
       <label for="fullName">ФИО обучающегося:</label>
