--- a/data/static/html/admin_base.html
+++ b/data/static/html/admin_base.html
@@ -39,7 +39,7 @@
   <div class="">{% block base_content %}{% endblock %}</div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
+  <script src="/static/js/jsoneditor.min.js"></script>
   <script>
     $(document).ready(function () {
       $('.navbar-toggler').on('click', function () {
